--- a/kingWeb/kingWeb/templates/adm/Shared/layout.html
+++ b/kingWeb/kingWeb/templates/adm/Shared/layout.html
@@ -12,7 +12,7 @@
     <link href="{%static 'lib/bootstrap/dist/css/bootstrap.min.css'%}" rel="stylesheet" />
     <link href="{%static 'lib/bootstrap/dist/css/bootstrap-theme.min.css'%}" rel="stylesheet" />
     <link href="{%static 'lib/font-awesome/css/font-awesome.min.css'%}" rel="stylesheet" />
-
+    <script src="{%static 'js/util.js'%}"></script>
     <script src="{%static 'js/lkWeb.js'%}"></script>
     <link rel="stylesheet" href="{%static 'css/site.css'%}" />
     <link href="{%static 'lib/datatables/media/css/jquery.dataTables.min.css'%}" rel="stylesheet" />
