--- a/kingWeb/kingWeb/templates/adm/shared/layout_content.html
+++ b/kingWeb/kingWeb/templates/adm/shared/layout_content.html
@@ -43,6 +43,7 @@
     <script src="{%static 'lib/datepicker/js/datepicker.all.min.js' %}"></script>
     <link href="{%static 'lib/datepicker/css/datepicker.css' %}" rel="stylesheet" />
 
+    <script src="{%static 'js/util.js'%}"></script>
     <script src="{%static 'js/lkWeb.js' %}" ></script>
     <link href="{%static 'css/site.css' %}" rel="stylesheet" />
 
