--- a/kingWeb/kingWeb/templates/adm/user/login.html
+++ b/kingWeb/kingWeb/templates/adm/user/login.html
@@ -18,6 +18,7 @@
     <link href="{% static 'lib/bootstrap/dist/css/bootstrap-theme.min.css' %}" rel="stylesheet" />
     <link href="{% static 'lib/font-awesome/css/font-awesome.min.css' %}" rel="stylesheet" />
 
+    <script src="{%static 'js/util.js'%}"></script>
     <script src="{% static 'lib/layer/src/layer.js' %}"></script>
     <script src="{% static 'js/lkWeb.js' %}"></script>
 
