--- a/kingWeb/kingWeb/templates/adm/table_list/add.html
+++ b/kingWeb/kingWeb/templates/adm/table_list/add.html
@@ -140,6 +140,12 @@
         </div>
     </div>
     <div class="form-group">
+            <label class="col-md-2 control-label">JS代码</label>
+            <div class="col-md-7">
+                <textarea class="form-control" name="JavaScript" rows="3" data-toggle="tooltip" title="onload页面加载时执行"></textarea>
+            </div>
+        </div>
+    <div class="form-group">
         <div class="col-md-3 col-md-offset-3">
             <button type="submit" class="btn btn-success">确定</button>
             <button type="button" class="btn btn-default" onclick="lkWeb.RefreshAndClose()">返回</button>
