--- a/kingWeb/kingWeb/templates/adm/shared/layout_content.html
+++ b/kingWeb/kingWeb/templates/adm/shared/layout_content.html
@@ -10,6 +10,7 @@
     <script src="{%static 'lib/jquery-form/dist/jquery.form.min.js' %}"></script>
     <script src="{%static 'lib/jquery-validation/dist/jquery.validate.min.js' %}"></script>
     <script src="{%static 'lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js' %}"></script>
+    <script src="{%static 'js/jquery.validation.rule.js' %}" ></script>
 
     <!--Ztree-->
     <link href="{% static 'lib/zTree/css/metroStyle/metroStyle.css' %}" rel="stylesheet" />
