--- a/kingWeb/kingWeb/templates/adm/table_column/edit.html
+++ b/kingWeb/kingWeb/templates/adm/table_column/edit.html
@@ -10,6 +10,9 @@
         lkWeb.FormValidation($("#lkForm"), function () {
             lkWeb.RefreshAndClose()
         }, "操作成功")
+         {% autoescape off %}
+        $("#ValidationRule").val("{{validationrule}}")
+         {% endautoescape %}
     })
 
     </script>
@@ -80,6 +83,22 @@
         <div class="col-md-4">
             <input type="text" class="form-control" name="EditOrder"  value="{{editorder}}"/>
         </div>
+        <label class="col-md-2 control-label">验证规则</label>
+    <div class="col-md-4">
+            <select class="form-control" name="ValidationRule" value="{{validationrole}}" id="ValidationRule">
+                <option value="" >无</option>
+                <option value="letterNumber='true'">字母数字</option>
+                <option value="cnLetterNumber='true'">汉字字母数字</option>
+                <option value="chinese='true'">汉字</option>
+                <option value="chineseAll='true'">汉字和中文符号</option>
+                <option value="isEmail='true'">邮箱</option>
+                <option value="isIdCard='true'">身份证号</option>
+                <option value="isMobile='true'">手机号</option>
+                <option value="isTel='true'">电话号码</option>
+                <option value="isContactPhone='true'">联系电话(手机/电话)</option>
+                <option value="isZipCode='true'">邮政编码</option>
+            </select>
+    </div>
 
     </div>
     <div class="form-group">
