--- a/kingWeb/kingWeb/templates/adm/module/edit.html
+++ b/kingWeb/kingWeb/templates/adm/module/edit.html
@@ -21,19 +21,19 @@
     <div class="form-group">
         <label class="col-md-3 control-label">模块名称</label>
         <div class="col-md-7">
-            <input type="text" class="form-control" name="Name" value="{{name}}"
+            <input type="text" class="form-control" name="name" value="{{name}}"
                    data-val="true" data-val-maxlength="模块名称长度不能超过12个字符" data-val-maxlength-max="12"
                    data-val-minlength="模块名称长度不能少于2个字符" data-val-minlength-min="2" data-val-required="模块名称不能为空" />
-            <span class="field-validation-valid" data-valmsg-for="Name" data-valmsg-replace="true"></span>
+            <span class="field-validation-valid" data-valmsg-for="name" data-valmsg-replace="true"></span>
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-3 control-label">模块描述</label>
         <div class="col-md-7">
-            <textarea type="text" class="form-control" name="Description"
+            <textarea type="text" class="form-control" name="description"
                       data-val="true" data-val-maxlength="模块描述长度不能超过100个字符" data-val-maxlength-max="100"
                       data-val-required="模块描述不能为空" rows="3">{{description}}</textarea>
-            <span class="field-validation-valid" data-valmsg-for="Description" data-valmsg-replace="true"></span>
+            <span class="field-validation-valid" data-valmsg-for="description" data-valmsg-replace="true"></span>
         </div>
     </div>
     <div class="form-group">
