--- a/kingWeb/kingWeb/templates/adm/system_option/add.html
+++ b/kingWeb/kingWeb/templates/adm/system_option/add.html
@@ -19,18 +19,18 @@
     <div class="form-group">
         <label class="col-md-3 control-label">代码</label>
         <div class="col-md-7">
-            <input type="text" class="form-control" name="Code"
+            <input type="text" class="form-control" name="code"
                    data-val="true" data-val-maxlength="代码长度不能超过20个字符" data-val-maxlength-max="20"
                    data-val-minlength="代码长度不能少于1个字符" data-val-minlength-min="1" data-val-required="代码不能为空" />
-            <span class="field-validation-valid" data-valmsg-for="Code" data-valmsg-replace="true"></span>
+            <span class="field-validation-valid" data-valmsg-for="code" data-valmsg-replace="true"></span>
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-3 control-label">值</label>
         <div class="col-md-7">
-            <textarea type="text" class="form-control" name="Value"
+            <textarea type="text" class="form-control" name="value"
                       data-val="true"  data-val-required="值不能为空" rows="3"></textarea>
-            <span class="field-validation-valid" data-valmsg-for="Value" data-valmsg-replace="true"></span>
+            <span class="field-validation-valid" data-valmsg-for="value" data-valmsg-replace="true"></span>
         </div>
     </div>
     <div class="form-group">
