--- a/kingWeb/kingWeb/templates/adm/system_option/edit.html
+++ b/kingWeb/kingWeb/templates/adm/system_option/edit.html
@@ -15,22 +15,22 @@
 
 {% block content %}
 <form class="form-horizontal" action="/adm/systemoption/post_edit/" method="post" id="lkForm">
-   <input type="hidden" name="Id" value="{{id}}"/>
+   <input type="hidden" name="id" value="{{id}}"/>
      {%csrf_token%}
     <div class="form-group">
         <label class="col-md-3 control-label">代码</label>
         <div class="col-md-7">
-            <input type="text" class="form-control" name="Code" value="{{code}}"
+            <input type="text" class="form-control" name="code" value="{{code}}"
                    data-val-minlength="代码长度不能少于1个字符" data-val-minlength-min="1" data-val-required="代码不能为空" />
-            <span class="field-validation-valid" data-valmsg-for="Code" data-valmsg-replace="true"></span>
+            <span class="field-validation-valid" data-valmsg-for="code" data-valmsg-replace="true"></span>
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-3 control-label">值</label>
         <div class="col-md-7">
-            <textarea type="text" class="form-control" name="Value"
+            <textarea type="text" class="form-control" name="value"
                       data-val="true" data-val-required="值不能为空" rows="3">{{value}}</textarea>
-            <span class="field-validation-valid" data-valmsg-for="Value" data-valmsg-replace="true"></span>
+            <span class="field-validation-valid" data-valmsg-for="value" data-valmsg-replace="true"></span>
         </div>
     </div>
     <div class="form-group">
