--- a/kingWeb/kingWeb/templates/adm/department/edit.html
+++ b/kingWeb/kingWeb/templates/adm/department/edit.html
@@ -15,12 +15,11 @@
 {% block content %}
 <form class="form-horizontal" action="/adm/department/post_edit/" method="post" id="lkForm">
    {%csrf_token%}
-   <input type="hidden" value="{{id}}" name="Id"/>
+   <input type="hidden" value="{{id}}" name="id"/>
     <div class="form-group">
-        <input type="hidden" name="ParentId" value="{{parentid}}" />
         <label class="col-md-3 control-label">上级部门</label>
         <div class="col-md-7">
-           <select name="ParentId" class="form-control" >
+           <select name="parentid" class="form-control" >
              {% for item in departments%}
                 <option value="{{item.id}}" {%ifequal item.id parentid %} selected {%endifequal%}>{{item.name}}</option>
              {% endfor %}
@@ -30,27 +29,27 @@
     <div class="form-group">
         <label class="col-md-3 control-label">部门名称</label>
         <div class="col-md-7">
-            <input type="text" class="form-control" name="Name" value="{{name}}"
+            <input type="text" class="form-control" name="name" value="{{name}}"
                    data-val="true" data-val-maxlength="部门名称长度不能超过12个字符" data-val-maxlength-max="12"
                    data-val-minlength="部门名称长度不能少于2个字符" data-val-minlength-min="2" data-val-required="部门名称不能为空" />
-            <span class="field-validation-valid" data-valmsg-for="Name" data-valmsg-replace="true"></span>
+            <span class="field-validation-valid" data-valmsg-for="name" data-valmsg-replace="true"></span>
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-3 control-label">负责人</label>
         <div class="col-md-7">
-            <input type="text" class="form-control" name="Leader" value="{{leader}}"
+            <input type="text" class="form-control" name="leader" value="{{leader}}"
                    data-val="true" data-val-maxlength="负责人长度不能超过12个字符" data-val-maxlength-max="12"
                    data-val-minlength="负责人长度不能少于2个字符" data-val-minlength-min="2" data-val-required="负责人不能为空" />
-            <span class="field-validation-valid" data-valmsg-for="Leader" data-valmsg-replace="true"></span>
+            <span class="field-validation-valid" data-valmsg-for="leader" data-valmsg-replace="true"></span>
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-3 control-label">部门说明</label>
         <div class="col-md-7">
-            <textarea class="form-control" name="Description"
+            <textarea class="form-control" name="description"
                       data-val="true" data-val-maxlength="部门说明长度不能超过100个字符" data-val-maxlength-max="100" rows="3">{{description}}</textarea>
-            <span class="field-validation-valid" data-valmsg-for="Description" data-valmsg-replace="true"></span>
+            <span class="field-validation-valid" data-valmsg-for="description" data-valmsg-replace="true"></span>
         </div>
     </div>
     <div class="form-group">
