--- a/kingWeb/kingWeb/templates/adm/menu/add.html
+++ b/kingWeb/kingWeb/templates/adm/menu/add.html
@@ -33,9 +33,7 @@
             });
         })
     })
-    function SelectModule(value) {
-        $("#txtModuleId").val(value);
-    }
+
     function ViewIcon() {
         var url = " http://www.fontawesome.com.cn/faicons/";
         lkWeb.OpenLayer(url, "图标库", "80%", "500px");
@@ -50,8 +48,7 @@
     <div class="form-group">
         <label class="col-md-3 control-label">所属模块</label>
         <div class="col-md-7">
-            <input name="ModuleId" type="hidden" id="txtModuleId" value="{{moduleid}}" />
-              <select name="ParentId" class="form-control" onchange="SelectModule(this.value)">
+              <select name="moduleid" class="form-control">
              {% for item in modules%}
                 <option value="{{item.id}}">{{item.name}}</option>
              {% endfor %}
@@ -62,7 +59,7 @@
         <label class="col-md-3 control-label">上级菜单</label>
         <div class="col-md-7">
             <div class="input-group">
-                <input name="ParentId" type="hidden" id="txtParentId" value="{{parentid}}" />
+                <input name="parentid" type="hidden" id="txtParentId" value="{{parentid}}" />
                 <input class="form-control" type="text" autocomplete="off" id="menuList" value="{{parentname}}" />
                 <div class="input-group-btn">
                     <button type="button" class="btn btn-default dropdown-toggle" data-toggle>
@@ -76,36 +73,36 @@
     <div class="form-group">
         <label class="col-md-3 control-label">菜单名称</label>
         <div class="col-md-7">
-            <input type="text" class="form-control" name="Name"
+            <input type="text" class="form-control" name="name"
                    data-val="true" data-val-maxlength="菜单名称长度不能超过18个字符" data-val-maxlength-max="8"
                    data-val-minlength="菜单名称长度不能少于2个字符" data-val-minlength-min="2" data-val-required="菜单名称不能为空" />
-            <span class="field-validation-valid" data-valmsg-for="Name" data-valmsg-replace="true"></span>
+            <span class="field-validation-valid" data-valmsg-for="name" data-valmsg-replace="true"></span>
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-3 control-label">菜单地址</label>
         <div class="col-md-7">
-            <input type="text" class="form-control" name="Url"
+            <input type="text" class="form-control" name="url"
                    data-val="true" data-val-maxlength="菜单地址不能超过200个字符" data-val-maxlength-max="200"
                    data-val-minlength="菜单地址不能少于1个字符" data-val-minlength-min="1" data-val-required="菜单地址不能为空" />
-            <span class="field-validation-valid" data-valmsg-for="Url" data-valmsg-replace="true"></span>
+            <span class="field-validation-valid" data-valmsg-for="url" data-valmsg-replace="true"></span>
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-3 control-label">菜单图标</label>
         <div class="col-md-7">
-            <input type="text" class="form-control" name="Icon"
+            <input type="text" class="form-control" name="icon"
                    data-val="true" data-val-maxlength="菜单图标不能超过50个字符" data-val-maxlength-max="50" />
-            <span class="field-validation-valid" data-valmsg-for="Icon" data-valmsg-replace="true"></span>
+            <span class="field-validation-valid" data-valmsg-for="icon" data-valmsg-replace="true"></span>
             <button class="btn btn-sm btn-info" style="margin:3px;" type="button" onclick="ViewIcon()">查看图标库</button>
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-3 control-label">排序</label>
         <div class="col-md-7">
-            <input type="text" class="form-control" name="ListOrder"
+            <input type="text" class="form-control" name="listorder"
                    data-val-number="排序必须是一个数字。" data-val-required="排序不能为空" data-val="true" />
-            <span class="field-validation-valid" data-valmsg-for="ListOrder" data-valmsg-replace="true"></span>
+            <span class="field-validation-valid" data-valmsg-for="listorder" data-valmsg-replace="true"></span>
 
         </div>
     </div>
