--- a/kingWeb/kingWeb/templates/adm/role/edit.html
+++ b/kingWeb/kingWeb/templates/adm/role/edit.html
@@ -16,24 +16,24 @@
 {% block content %}
 
 <form class="form-horizontal" action="/adm/role/post_edit/" method="post" id="lkForm">
-     <input type="hidden" name="Id" value="{{id}}" />
+     <input type="hidden" name="id" value="{{id}}" />
    {%csrf_token%}
     <div class="form-group">
         <label class="col-md-3 control-label">角色名称</label>
         <div class="col-md-7">
-            <input type="text" class="form-control" name="Name" value="{{name}}"
+            <input type="text" class="form-control" name="name" value="{{name}}"
                    data-val="true" data-val-maxlength="角色名称长度不能超过12个字符" data-val-maxlength-max="12"
                    data-val-minlength="角色名称长度不能少于2个字符" data-val-minlength-min="2" data-val-required="角色名称不能为空" />
-            <span class="field-validation-valid" data-valmsg-for="Name" data-valmsg-replace="true"></span>
+            <span class="field-validation-valid" data-valmsg-for="name" data-valmsg-replace="true"></span>
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-3 control-label">角色描述</label>
         <div class="col-md-7">
-            <textarea type="text" class="form-control" name="Description"
+            <textarea type="text" class="form-control" name="description"
                       data-val="true" data-val-maxlength="角色描述长度不能超过100个字符" data-val-maxlength-max="100"
                       data-val-required="角色描述不能为空" rows="3">{{description}}</textarea>
-            <span class="field-validation-valid" data-valmsg-for="Description" data-valmsg-replace="true"></span>
+            <span class="field-validation-valid" data-valmsg-for="description" data-valmsg-replace="true"></span>
         </div>
     </div>
     <div class="form-group">
