--- a/kingWeb/kingWeb/templates/adm/table_list/add.html
+++ b/kingWeb/kingWeb/templates/adm/table_list/add.html
@@ -21,74 +21,74 @@
     <div class="form-group">
         <label class="col-md-2 control-label">表名</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="Name"
+            <input type="text" class="form-control" name="name"
                    data-val="true" data-val-maxlength="表名长度不能超过50个字符" data-val-maxlength-max="50"
                    data-val-minlength="表名长度不能少于2个字符" data-val-minlength-min="2" data-val-required="表名不能为空" />
-            <span class="field-validation-valid" data-valmsg-for="Name" data-valmsg-replace="true"></span>
+            <span class="field-validation-valid" data-valmsg-for="name" data-valmsg-replace="true"></span>
         </div>
         <label class="col-md-2 control-label">表说明</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="Description"
+            <input type="text" class="form-control" name="description"
                    data-val="true" data-val-maxlength="表说明长度不能超过50个字符" data-val-maxlength-max="50"
                    data-val-minlength="表说明长度不能少于2个字符" data-val-minlength-min="2" data-val-required="表说明不能为空" />
-            <span class="field-validation-valid" data-valmsg-for="Description" data-valmsg-replace="true"></span>
+            <span class="field-validation-valid" data-valmsg-for="description" data-valmsg-replace="true"></span>
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">删除表名</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="DeleteTableName" data-toggle="tooltip" title="一般为此表名" />
+            <input type="text" class="form-control" name="deletetablename" data-toggle="tooltip" title="一般为此表名" />
         </div>
         <label class="col-md-2 control-label">详情是否允许</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="AllowDetail" data-toggle="tooltip" title="1 or 0" />
+            <input type="text" class="form-control" name="allowdetail" data-toggle="tooltip" title="1 or 0" />
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">查看是否允许</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="AllowView" data-toggle="tooltip" title="1 or 0" />
+            <input type="text" class="form-control" name="allowview" data-toggle="tooltip" title="1 or 0" />
         </div>
                 <label class="col-md-2 control-label">添加是否允许</label>
          <div class="col-md-4">
-             <input type="text" class="form-control" name="AllowAdd" data-toggle="tooltip" title="1 or 0" />
+             <input type="text" class="form-control" name="allowadd" data-toggle="tooltip" title="1 or 0" />
          </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">编辑是否允许</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="AllowEdit" data-toggle="tooltip" title="1 or 0" />
+            <input type="text" class="form-control" name="allowedit" data-toggle="tooltip" title="1 or 0" />
         </div>
         <label class="col-md-2 control-label">删除是否允许</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="AllowDelete" data-toggle="tooltip" title="1 or 0" />
+            <input type="text" class="form-control" name="allowdelete" data-toggle="tooltip" title="1 or 0" />
         </div>
     </div>
 
     <div class="form-group">
         <label class="col-md-2 control-label">导入是否允许</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="AllowImport" data-toggle="tooltip" title="1 or 0" />
+            <input type="text" class="form-control" name="allowimport" data-toggle="tooltip" title="1 or 0" />
         </div>
         <label class="col-md-2 control-label">导出是否允许</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="AllowExport" data-toggle="tooltip" title="1 or 0" />
+            <input type="text" class="form-control" name="allowexport" data-toggle="tooltip" title="1 or 0" />
         </div>
     </div>
     <div class="form-group">
             <label class="col-md-2 control-label">查看,添加编辑宽高</label>
             <div class="col-md-4">
-                <input type="text" class="form-control" name="ViewEditWidthHeight" data-toggle="tooltip" title="width,height|width,height(单位px或%,非法值默认改为90%)" />
+                <input type="text" class="form-control" name="vieweditwidthheight" data-toggle="tooltip" title="width,height|width,height(单位px或%,非法值默认改为90%)" />
             </div>
             <label class="col-md-2 control-label">添加编辑,查看每行列数</label>
             <div class="col-md-4">
-                <input type="text" class="form-control" name="ColumnPerRow" data-toggle="tooltip" title="2,2" />
+                <input type="text" class="form-control" name="columnperrow" data-toggle="tooltip" title="2,2" />
             </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">导入类型</label>
         <div class="col-md-4">
-             <select name="ImportType" class="form-control">
+             <select name="importtype" class="form-control">
             {% for item in import_type_list%}
                 <option value="{{item.value}}">{{item.name}}</option>
              {% endfor %}
@@ -96,7 +96,7 @@
         </div>
         <label class="col-md-2 control-label">是否视图</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="IsView" data-val-maxlength="是否视图长度不能超过2个字符" data-val-maxlength-max="2"
+            <input type="text" class="form-control" name="isview" data-val-maxlength="是否视图长度不能超过2个字符" data-val-maxlength-max="2"
                    data-val="true" data-val-required="是否视图不能为空" data-toggle="tooltip" title="1 or 0" />
             <span class="field-validation-valid" data-valmsg-for="IsView" data-valmsg-replace="true"></span>
         </div>
@@ -104,45 +104,45 @@
     <div class="form-group">
         <label class="col-md-2 control-label">默认排序条件</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="DefaultSort" data-toggle="tooltip" title="例如:Id desc" />
+            <input type="text" class="form-control" name="defaultsort" data-toggle="tooltip" title="例如:Id desc" />
         </div>
         <label class="col-md-2 control-label">允许删除条件</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="ForbiddenDeleteFilter" data-toggle="tooltip" title="例如:Id > 10 可选参数{UserId}" />
+            <input type="text" class="form-control" name="forbiddendeletefilter" data-toggle="tooltip" title="例如:Id > 10 可选参数{UserId}" />
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">允许更新条件</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="ForbiddenUpdateFilter" data-toggle="tooltip" title="例如: Id < 10 可选参数{UserId}" />
+            <input type="text" class="form-control" name="forbiddenupdatefilter" data-toggle="tooltip" title="例如: Id < 10 可选参数{UserId}" />
         </div>
         <label class="col-md-2 control-label">允许添加条件</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="ForbiddenAddFilter" placeholder="未实现" />
+            <input type="text" class="form-control" name="forbiddenaddfilter" placeholder="未实现" />
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">默认过滤条件</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="DefaultFilter" data-toggle="tooltip" title="例如: Id != 10 ,可选参数{UserId}" />
+            <input type="text" class="form-control" name="defaultfilter" data-toggle="tooltip" title="例如: Id != 10 ,可选参数{UserId}" />
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">扩展方法</label>
         <div class="col-md-7">
-            <textarea class="form-control" name="ExtendFunction" rows="3" data-toggle="tooltip" title="可选参数:{Id},{UserId}"></textarea>
+            <textarea class="form-control" name="extendfunction" rows="3" data-toggle="tooltip" title="可选参数:{Id},{UserId}"></textarea>
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">顶部扩展方法</label>
         <div class="col-md-7">
-            <textarea class="form-control" name="TopExtendFunction" rows="3" data-toggle="tooltip" title="可选参数:{UserId}"></textarea>
+            <textarea class="form-control" name="topextendfunction" rows="3" data-toggle="tooltip" title="可选参数:{UserId}"></textarea>
         </div>
     </div>
     <div class="form-group">
             <label class="col-md-2 control-label">JS代码</label>
             <div class="col-md-7">
-                <textarea class="form-control" name="JavaScript" rows="3" data-toggle="tooltip" title="onload页面加载时执行"></textarea>
+                <textarea class="form-control" name="javascript" rows="3" data-toggle="tooltip" title="onload页面加载时执行"></textarea>
             </div>
         </div>
     <div class="form-group">
