--- a/kingWeb/kingWeb/templates/adm/table_list/edit.html
+++ b/kingWeb/kingWeb/templates/adm/table_list/edit.html
@@ -17,79 +17,79 @@
 
 {% block content %}
 <form class="form-horizontal" action="/adm/tablelist/post_edit/" method="post" id="lkForm">
-   <input type="hidden" name="Id" value="{{id}}" />
+   <input type="hidden" name="id" value="{{object.id}}" />
     {%csrf_token%}
     <div class="form-group">
         <label class="col-md-2 control-label">表名</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="Name" value="{{name}}"
+            <input type="text" class="form-control" name="name" value="{{object.name}}"
                    data-val="true" data-val-maxlength="表名长度不能超过50个字符" data-val-maxlength-max="50"
                    data-val-minlength="表名长度不能少于2个字符" data-val-minlength-min="2" data-val-required="表名不能为空" />
-            <span class="field-validation-valid" data-valmsg-for="Name" data-valmsg-replace="true"></span>
+            <span class="field-validation-valid" data-valmsg-for="name" data-valmsg-replace="true"></span>
         </div>
         <label class="col-md-2 control-label">表说明</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="Description" value="{{description}}"
+            <input type="text" class="form-control" name="description" value="{{object.description}}"
                    data-val="true" data-val-maxlength="表说明长度不能超过50个字符" data-val-maxlength-max="50"
                    data-val-minlength="表说明长度不能少于2个字符" data-val-minlength-min="2" data-val-required="表说明不能为空" />
-            <span class="field-validation-valid" data-valmsg-for="Description" data-valmsg-replace="true"></span>
+            <span class="field-validation-valid" data-valmsg-for="description" data-valmsg-replace="true"></span>
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">删除表名</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="DeleteTableName" value="{{deletetablename}}" data-toggle="tooltip" title="一般为此表名" />
+            <input type="text" class="form-control" name="deletetablename" value="{{object.deletetablename}}" data-toggle="tooltip" title="一般为此表名" />
         </div>
         <label class="col-md-2 control-label">详情是否允许</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="AllowDetail" value="{{allowdetail}}" data-toggle="tooltip" title="1 or 0" />
+            <input type="text" class="form-control" name="allowdetail" value="{{object.allowdetail}}" data-toggle="tooltip" title="1 or 0" />
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">查看是否允许</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="AllowView" value="{{allowview}}" data-toggle="tooltip" title="1 or 0" />
+            <input type="text" class="form-control" name="allowview" value="{{object.allowview}}" data-toggle="tooltip" title="1 or 0" />
         </div>
         <label class="col-md-2 control-label">添加是否允许</label>
          <div class="col-md-4">
-             <input type="text" class="form-control" name="AllowAdd" value="{{allowadd}}" data-toggle="tooltip" title="1 or 0" />
+             <input type="text" class="form-control" name="allowadd" value="{{object.allowadd}}" data-toggle="tooltip" title="1 or 0" />
          </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">编辑是否允许</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="AllowEdit" value="{{allowedit}}" data-toggle="tooltip" title="1 or 0" />
+            <input type="text" class="form-control" name="allowedit" value="{{object.allowedit}}" data-toggle="tooltip" title="1 or 0" />
         </div>
         <label class="col-md-2 control-label">删除是否允许</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="AllowDelete" value="{{allowdelete}}" data-toggle="tooltip" title="1 or 0" />
+            <input type="text" class="form-control" name="allowdelete" value="{{object.allowdelete}}" data-toggle="tooltip" title="1 or 0" />
         </div>
     </div>
 
     <div class="form-group">
         <label class="col-md-2 control-label">导入是否允许</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="AllowImport" value="{{allowimport}}" data-toggle="tooltip" title="1 or 0" />
+            <input type="text" class="form-control" name="allowimport" value="{{object.allowimport}}" data-toggle="tooltip" title="1 or 0" />
         </div>
         <label class="col-md-2 control-label">导出是否允许</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="AllowExport" value="{{allowexport}}" data-toggle="tooltip" title="1 or 0" />
+            <input type="text" class="form-control" name="allowexport" value="{{object.allowexport}}" data-toggle="tooltip" title="1 or 0" />
         </div>
     </div>
     <div class="form-group">
             <label class="col-md-2 control-label">查看,添加编辑宽高</label>
             <div class="col-md-4">
-                <input type="text" class="form-control" value="{{vieweditwidthheight}}" name="ViewEditWidthHeight" data-toggle="tooltip" title="width,height|width,height(单位px或%,非法值默认改为90%)" />
+                <input type="text" class="form-control" value="{{object.vieweditwidthheight}}" name="vieweditwidthheight" data-toggle="tooltip" title="width,height|width,height(单位px或%,非法值默认改为90%)" />
             </div>
             <label class="col-md-2 control-label">添加编辑,查看每行列数</label>
             <div class="col-md-4">
-                <input type="text" class="form-control" value="{{columnperrow}}" name="ColumnPerRow" data-toggle="tooltip" title="2,2" />
+                <input type="text" class="form-control" value="{{object.columnperrow}}" name="columnperrow" data-toggle="tooltip" title="2,2" />
             </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">导入类型</label>
         <div class="col-md-4">
-             <select name="ImportType" class="form-control">
+             <select name="importtype" class="form-control">
             {% for item in import_type_list%}
                 <option value="{{item.value}}" {%ifequal importtype item.value %}selected {%endifequal%}>{{item.name}}</option>
              {% endfor %}
@@ -97,7 +97,7 @@
         </div>
         <label class="col-md-2 control-label">是否视图</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="IsView" value="{{isview}}" data-val-maxlength="是否视图长度不能超过2个字符" data-val-maxlength-max="2"
+            <input type="text" class="form-control" name="isview" value="{{object.isview}}" data-val-maxlength="是否视图长度不能超过2个字符" data-val-maxlength-max="2"
                    data-val="true" data-val-required="是否视图不能为空" data-toggle="tooltip" title="1 or 0" />
             <span class="field-validation-valid" data-valmsg-for="IsView" data-valmsg-replace="true"></span>
         </div>
@@ -105,45 +105,45 @@
     <div class="form-group">
         <label class="col-md-2 control-label">默认排序条件</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="DefaultSort" value="{{defaultsort}}" data-toggle="tooltip" title="例如:Id desc" />
+            <input type="text" class="form-control" name="defaultsort" value="{{object.defaultsort}}" data-toggle="tooltip" title="例如:Id desc" />
         </div>
         <label class="col-md-2 control-label">允许删除条件</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="ForbiddenDeleteFilter" value="{{forbiddendeletefilter}}" data-toggle="tooltip" title="例如: Id < 10 可选参数{UserId}" />
+            <input type="text" class="form-control" name="forbiddendeletefilter" value="{{object.forbiddendeletefilter}}" data-toggle="tooltip" title="例如: Id < 10 可选参数{UserId}" />
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">允许更新条件</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="ForbiddenUpdateFilter" value="{{forbiddenupdatefilter}}" data-toggle="tooltip" title="例如: Id < 10 可选参数{UserId}" />
+            <input type="text" class="form-control" name="forbiddenupdatefilter" value="{{object.forbiddenupdatefilter}}" data-toggle="tooltip" title="例如: Id < 10 可选参数{UserId}" />
         </div>
         <label class="col-md-2 control-label">允许添加条件</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="ForbiddenAddFilter" value="{{forbiddenaddfilter}}" placeholder="未实现" />
+            <input type="text" class="form-control" name="forbiddenaddfilter" value="{{object.forbiddenaddfilter}}" placeholder="未实现" />
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">默认过滤条件</label>
         <div class="col-md-4">
-            <input type="text" class="form-control" name="DefaultFilter" value="{{defaultfilter}}" data-toggle="tooltip" title="例如: Id != 100,可选参数{UserId}" />
+            <input type="text" class="form-control" name="defaultfilter" value="{{object.defaultfilter}}" data-toggle="tooltip" title="例如: Id != 100,可选参数{UserId}" />
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">扩展方法</label>
         <div class="col-md-7">
-            <textarea class="form-control" name="ExtendFunction" rows="3" data-toggle="tooltip" title="可选参数:{Id},{UserId}">{{extendfunction}}</textarea>
+            <textarea class="form-control" name="extendfunction" rows="3" data-toggle="tooltip" title="可选参数:{Id},{UserId}">{{object.extendfunction}}</textarea>
         </div>
     </div>
     <div class="form-group">
         <label class="col-md-2 control-label">顶部扩展方法</label>
         <div class="col-md-7">
-            <textarea class="form-control" name="TopExtendFunction" rows="3" data-toggle="tooltip" title="可选参数:{UserId}">{{topextendfunction}}</textarea>
+            <textarea class="form-control" name="topextendfunction" rows="3" data-toggle="tooltip" title="可选参数:{UserId}">{{object.topextendfunction}}</textarea>
         </div>
     </div>
     <div class="form-group">
             <label class="col-md-2 control-label">JS代码</label>
             <div class="col-md-7">
-                <textarea class="form-control" name="JavaScript" rows="3" data-toggle="tooltip" title="onload页面加载时执行">{{javascript}}</textarea>
+                <textarea class="form-control" name="javascript" rows="3" data-toggle="tooltip" title="onload页面加载时执行">{{object.javascript}}</textarea>
             </div>
     </div>
     <div class="form-group">
