--- a/kingWeb/kingWeb/templates/adm/system_option/index.html
+++ b/kingWeb/kingWeb/templates/adm/system_option/index.html
@@ -48,7 +48,8 @@
             },
             { "mData": "rownum", "sClass": "text-center", "bSortable": false },
             { "mData": "code", "name": "name", "sClass": "text-center" },
-            { "mData": "value", "sClass": "text-center" }
+            { "mData": "value", "sClass": "text-center" },
+            { "mData": "description", "sClass": "text-center" },
         ];
         lkTable = lkWeb.LoadTable("lkTable", columns, dataUrl)
     }
@@ -80,6 +81,7 @@
             <th>序号</th>
             <th>代码</th>
             <th>值</th>
+            <th>描述</th>
         </tr>
     </thead>
     <tbody></tbody>
