--- a/kingWeb/kingWeb/templates/adm/system_option/edit.html
+++ b/kingWeb/kingWeb/templates/adm/system_option/edit.html
@@ -34,6 +34,15 @@
         </div>
     </div>
     <div class="form-group">
+        <label class="col-md-3 control-label">描述</label>
+        <div class="col-md-7">
+            <textarea type="text" class="form-control" name="description"
+                      data-val="true" data-val-maxlength="描述长度不能超过100个字符" data-val-maxlength-max="100"
+                      data-val-required="描述不能为空" rows="3"></textarea>
+            <span class="field-validation-valid" data-valmsg-for="description" data-valmsg-replace="true"></span>
+        </div>
+    </div>
+    <div class="form-group">
         <div class="col-md-3 col-md-offset-3">
             <button type="submit" class="btn btn-success">确定</button>
             <button type="button" class="btn btn-default" onclick="lkWeb.RefreshAndClose()">返回</button>
